--- a/PlantGame/res/layout/activity_main.xml
+++ b/PlantGame/res/layout/activity_main.xml
@@ -8,18 +8,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/plantView"
+        <ImageSwitcher
+            android:id="@+id/imageSwitcher"
             android:layout_width="300dp"
             android:layout_height="200dp"
-            android:layout_gravity="center|top"
+            android:layout_gravity="center|fill"
             android:layout_margin="10dp"
-            android:layout_marginBottom="66dp"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter" >
+
+        </ImageSwitcher>
 
         <TableLayout
             android:layout_width="match_parent"
@@ -72,43 +73,53 @@
                     android:text="Name deutsch" />
             </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow3"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal" >
+                android:layout_margin="1dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:padding="0dp" >
 
-                <Button
+                <ImageButton
                     android:id="@+id/back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@drawable/ic_navigation_back"
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="5dp"
                     android:layout_marginBottom="22dp"
+                    android:background="@drawable/ic_navigation_back"
                     android:onClick="ButtonOnClick"
+                    android:padding="20dp"
+                    android:paddingLeft="20dp"
                     android:text="zurück" />
 
-                <Button
+                <ImageButton
+                    android:id="@+id/check"
+                    style="@drawable/ic_navigation_accept"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/ic_navigation_accept"
+                    android:onClick="ButtonOnClick"
+                    android:padding="0dp"
+                    android:text="Ok?" />
+
+                <ImageButton
                     android:id="@+id/forward"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@drawable/ic_navigation_forward"
+                    android:layout_width="80dp"
+                    android:layout_height="70dp"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/ic_navigation_forward"
                     android:onClick="ButtonOnClick"
                     android:text="weiter" />
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/tableRow4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal" >
-
-                <Button
-                    android:id="@+id/check"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="ButtonOnClick"
-                    android:text="Ok?" />
-            </TableRow>
+            </LinearLayout>
 
         </TableLayout>
+
     </LinearLayout>
 
 </FrameLayout>
